Fix weird formatting problem on narrow screens on index

--- a/styles/postindex.module.scss
+++ b/styles/postindex.module.scss
@@ -50,7 +50,7 @@ $split-box: math.div(450px, 16px) * 1rem;
 .title {
   display: block;
   position: relative;
-  z-index: 5;
+  z-index: 10;
 
 
   float: right;
@@ -58,13 +58,14 @@ $split-box: math.div(450px, 16px) * 1rem;
 
   text-align: right;
   color: $highlight;
-  font-family: $cyclone-outline;
+  font-family: $cyclone-fill;
   line-height: 0.875;
   font-size: 3rem;
 
-  text-shadow: 1px 1px 0 rgba(0,0,0,0.25);
+  text-shadow: 1px 1px 0 rgba(0,0,0,0.5);
 
   @media screen and (min-width: math.div(420px, 16px) * 1rem) {
+    font-family: $cyclone-outline;
     font-size: 4rem;
   }
   @media screen and (min-width: math.div(560px, 16px) * 1rem) {
@@ -77,14 +78,21 @@ $split-box: math.div(450px, 16px) * 1rem;
 
 .ir {
   position: relative;
-  width: 50%;
+  z-index: 1;
+  width: 75%;
   height: 0;
-  padding-bottom: 50%;
+  padding-bottom: 75%;
+
+  @media screen and (min-width: $split-box) {
+    width: 50%;
+    padding-bottom: 50%;
+  }
 
   &:before {
     content: " ";
     /* background: red; */
     position: absolute;
+    z-index: 2;
     top: 0;
     left: 0;
     width: 2rem;
@@ -100,6 +108,7 @@ $split-box: math.div(450px, 16px) * 1rem;
     content: " ";
     /* background: red; */
     position: absolute;
+    z-index: 2;
     bottom: 0;
     right: 0;
     width: 2rem;
